unpackaged/main/default/objects/New_Business__c/New_Business__c.object-meta.xml
<CustomObject>
    <description>New custom object to hold confidential information related to Exhibition Opportunities. Separate as we need to hold attachments not visible on the Exhibition</description>
    <label>New Business</label>
    <nameField>
        <displayFormat>NB-{00000}</displayFormat>
        <label>New Business ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>New Business</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>