unpackaged/main/default/objects/New_Business__c/fields/Build_Date_and_Times__c.field-meta.xml
<CustomField>
    <fullName>Build_Date_and_Times__c</fullName>
    <description>Holds the build date and times</description>
    <inlineHelpText>Please enter the build date and times</inlineHelpText>
    <label>Build Date and Times</label>
    <type>TextArea</type>
</CustomField>