unpackaged/main/default/objects/New_Business__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <description>Close Date, inherited from Exhibition Opportunity</description>
    <inlineHelpText>Close Date, inherited from Exhibition Opportunity</inlineHelpText>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>