unpackaged/main/default/objects/New_Business__c/fields/Contract_Notes__c.field-meta.xml
<CustomField>
    <fullName>Contract_Notes__c</fullName>
    <inlineHelpText>Please enter contract notes</inlineHelpText>
    <label>Contract Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>