unpackaged/main/default/objects/New_Business__c/fields/Exhibitor_Graphics__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Graphics__c</fullName>
    <inlineHelpText>Please select an option</inlineHelpText>
    <label>Exhibitor Graphics</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>