unpackaged/main/default/objects/New_Business__c/fields/Existing_Client__c.field-meta.xml
<CustomField>
    <fullName>Existing_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this an existing client</description>
    <inlineHelpText>Please check this only if this is an existing client</inlineHelpText>
    <label>Existing Client</label>
    <type>Checkbox</type>
</CustomField>