unpackaged/main/default/objects/New_Business__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <description>Facility, inherited from Exhibition Opportunity</description>
    <inlineHelpText>Facility, inherited from Exhibition Opportunity</inlineHelpText>
    <label>Facility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>