unpackaged/main/default/objects/New_Business__c/fields/Full_Year_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Full_Year_Revenue__c</fullName>
    <label>Full Year Estimate Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>