unpackaged/main/default/objects/New_Business__c/fields/Lost_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reasons__c</fullName>
    <label>Lost Reasons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Competitor Offering</fullName>
            </value>
            <value>
                <fullName>Show Cancelled</fullName>
            </value>
            <value>
                <fullName>Agency Lost Pitch</fullName>
            </value>
            <value>
                <fullName>Previous Bad Experience</fullName>
            </value>
            <value>
                <fullName>Creativity</fullName>
            </value>
            <value>
                <fullName>Standfitting</fullName>
            </value>
            <value>
                <fullName>Electrics</fullName>
            </value>
            <value>
                <fullName>Floorcovering</fullName>
            </value>
            <value>
                <fullName>Furniture</fullName>
            </value>
            <value>
                <fullName>Features</fullName>
            </value>
            <value>
                <fullName>Pricing Exercise/Benchmark</fullName>
            </value>
            <value>
                <fullName>Lost Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>