unpackaged/main/default/objects/New_Business__c/fields/New_Business_Status__c.field-meta.xml
<CustomField>
    <fullName>New_Business_Status__c</fullName>
    <inlineHelpText>Please select the relevant status. Setting to Submitted will trigger an email alert to an administrator</inlineHelpText>
    <label>New Business Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>