unpackaged/main/default/objects/New_Business__c/fields/Organiser_ID__c.field-meta.xml
<CustomField>
    <fullName>Organiser_ID__c</fullName>
    <inlineHelpText>Please enter the SOP Organiser ID</inlineHelpText>
    <label>Organiser ID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>