unpackaged/main/default/objects/New_Business__c/fields/Proposed_Services__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Services__c</fullName>
    <inlineHelpText>Please select the services you are proposing</inlineHelpText>
    <label>Proposed Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Blitz AV</fullName>
            </value>
            <value>
                <fullName>Design &amp; Build</fullName>
            </value>
            <value>
                <fullName>Electrics</fullName>
            </value>
            <value>
                <fullName>EMOL</fullName>
            </value>
            <value>
                <fullName>Exhibitor Graphics</fullName>
            </value>
            <value>
                <fullName>Floorcovering</fullName>
            </value>
            <value>
                <fullName>Floorplanning</fullName>
            </value>
            <value>
                <fullName>Furniture</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>N200</fullName>
            </value>
            <value>
                <fullName>Organiser Graphics</fullName>
            </value>
            <value>
                <fullName>Specialist Lighting</fullName>
            </value>
            <value>
                <fullName>Standfitting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>