unpackaged/main/default/objects/New_Business__c/fields/RAMS__c.field-meta.xml
<CustomField>
    <fullName>RAMS__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please check this once the RAMS have been completed (not the animals!)</inlineHelpText>
    <label>RAMS</label>
    <type>Checkbox</type>
</CustomField>