unpackaged/main/default/objects/New_Business__c/fields/Secured_Date__c.field-meta.xml
<CustomField>
    <fullName>Secured_Date__c</fullName>
    <description>Secured Date</description>
    <inlineHelpText>Please select the date that this job was secured on</inlineHelpText>
    <label>Secured Date</label>
    <type>Date</type>
</CustomField>