unpackaged/main/default/objects/New_Business__c/fields/Won_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Won_Reasons__c</fullName>
    <inlineHelpText>Please select Reasons</inlineHelpText>
    <label>Won Reasons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Added Value</fullName>
            </value>
            <value>
                <fullName>Client Referral</fullName>
            </value>
            <value>
                <fullName>Creativity</fullName>
            </value>
            <value>
                <fullName>Electrics</fullName>
            </value>
            <value>
                <fullName>Existing Relationship</fullName>
            </value>
            <value>
                <fullName>Features</fullName>
            </value>
            <value>
                <fullName>Floorcovering</fullName>
            </value>
            <value>
                <fullName>Full Service Provider</fullName>
            </value>
            <value>
                <fullName>Furniture</fullName>
            </value>
            <value>
                <fullName>Global Reach</fullName>
            </value>
            <value>
                <fullName>Health and Safety</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Part of Programme</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Service Level</fullName>
            </value>
            <value>
                <fullName>Standfitting</fullName>
            </value>
            <value>
                <fullName>Sustainability</fullName>
            </value>
            <value>
                <fullName>Venue Relationship</fullName>
            </value>
            <value>
                <fullName>Won Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>