unpackaged/main/default/objects/New_Business__c/recordTypes/Multi_Show_RFP.recordType-meta.xml
<RecordType>
    <fullName>Multi_Show_RFP</fullName>
    <active>true</active>
    <description>Object that stores competitive Bids for Muti-Show &amp; (Events)</description>
    <label>Multi-Show (RFP)</label>
</RecordType>