unpackaged/main/default/objects/New_Business__c/validationRules/Electrics_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Electrics_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Electrics__c, &quot;Yes&quot;)  &amp;&amp; (Electrics_Tariff__c = 0 || ISBLANK(Electrics_Tariff__c))</errorConditionFormula>
    <errorMessage>If you have selected Yes for Electrics, you must enter a value greater than 0 for Electrics Tariff</errorMessage>
</ValidationRule>