unpackaged/main/default/objects/New_Business__c/validationRules/Lost_Reasons_Other_is_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost_Reasons_Other_is_selected</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
 INCLUDES( Lost_Reasons__c , &quot;Lost Other&quot;), ISBLANK( Other__c )  )</errorConditionFormula>
    <errorMessage>Please Fill Other field</errorMessage>
</ValidationRule>