unpackaged/main/default/objects/New_Business__c/validationRules/Won_Reasons_Other_is_Selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Won_Reasons_Other_is_Selected</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  INCLUDES( Won_Reasons__c , &quot;Won Other&quot;),
 ISBLANK( Other__c )  )</errorConditionFormula>
    <errorMessage>Please Fill reason for Other</errorMessage>
</ValidationRule>