unpackaged/main/default/objects/New_Business__c/listViews/All_New_Business.listView-meta.xml
<ListView>
    <fullName>All_New_Business</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <columns>Opportunity__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>kpea,lhawk,jsqui,rcoll</value>
    </filters>
    <label>All New Business</label>
    <language>en_US</language>
</ListView>