unpackaged/main/default/objects/New_Business__c/listViews/Emmas_New_Business.listView-meta.xml
<ListView>
    <fullName>Emmas_New_Business</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>New_Business_Status__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <columns>Secured_Date__c</columns>
    <columns>Account_Manager_Assignment__c</columns>
    <columns>Agreements__c</columns>
    <columns>Event_ID__c</columns>
    <columns>Expresso_URL__c</columns>
    <columns>New_Client__c</columns>
    <columns>Existing_Client__c</columns>
    <columns>Order_forms__c</columns>
    <columns>Organiser_ID__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Emma</value>
    </filters>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>Poulton</value>
    </filters>
    <label>Emmas New Business</label>
    <language>en_US</language>
</ListView>