unpackaged/main/default/objects/New_Business__c/listViews/Leanne_New_Business.listView-meta.xml
<ListView>
    <fullName>Leanne_New_Business</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Show_Name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <columns>New_Business_Status__c</columns>
    <columns>Account_Manager_Assignment__c</columns>
    <columns>Agreements__c</columns>
    <columns>Event_ID__c</columns>
    <columns>Organiser_ID__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Leanne</value>
    </filters>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>Hawkes</value>
    </filters>
    <filters>
        <field>Opportunity__c</field>
        <operation>contains</operation>
        <value>2019</value>
    </filters>
    <label>Leanne New Business</label>
    <language>en_US</language>
</ListView>